--- a/index.html
+++ b/index.html
@@ -19,14 +19,9 @@
     <div id="maintenance-mode-banner" class="hidden">Site is currently undergoing maintenance. Please check back later.</div>
 
     <header>
-      <div class="header-container">
+        <div class="header-container">
             <h1><a href="#" id="nav-home-logo"><i class="fas fa-chart-pie"></i> <span id="app-name-header">NFX-Investor ProMax</span></a></h1>
-
-            <button id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
-                <span class="hamburger"></span>
-            </button>
-
-            <nav id="main-nav">
+            <nav>
                 <ul>
                     <li><a href="#" id="nav-home" class="active"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="#" id="nav-plans"><i class="fas fa-clipboard-list"></i> Plans</a></li>
@@ -799,7 +794,7 @@
             <p>For Educational & Illustrative Purposes Only. No real financial transactions occur.</p>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
 </body>
 </html>
