--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFX-Investor ProMax - Advanced Investment Platform</title>
+    <title>NFX-Investor -Advanced Investment</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -29,7 +29,7 @@
             </button>
             <nav id="main-nav">
                 <ul>
-                    <li><a href="#" id="nav-home" class="active"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="#" id="nav-home" class="active"><i class="fas fa-home"></i> Hom</a></li>
                     <li><a href="#" id="nav-plans"><i class="fas fa-clipboard-list"></i> Plans</a></li>
                     <li><a href="#" id="nav-faq"><i class="fas fa-question-circle"></i> FAQ</a></li>
                     <li><a href="#" id="nav-login" class="auth-nav"><i class="fas fa-sign-in-alt"></i> Login</a></li>
