--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </button>
             <nav id="main-nav">
                 <ul>
-                    <li><a href="#" id="nav-home" class="active"><i class="fas fa-home"></i> Hom</a></li>
+                    <li><a href="#" id="nav-home" class="active"><i class="fas fa-home"></i> Home</a></li>
                     <li><a href="#" id="nav-plans"><i class="fas fa-clipboard-list"></i> Plans</a></li>
                     <li><a href="#" id="nav-faq"><i class="fas fa-question-circle"></i> FAQ</a></li>
                     <li><a href="#" id="nav-login" class="auth-nav"><i class="fas fa-sign-in-alt"></i> Login</a></li>
@@ -902,8 +902,8 @@
                 <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a><a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
                 <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a><a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
             </div>
-            <p>© <span id="current-year"></span> <span class="app-name-dynamic">NFX-Investor ProMax</span>. All Rights Reserved.</p>
-            <p>This platform uses a simulated backend. For full functionality with Supabase, ensure backend tables and RLS are set up.</p>
+            <p>© <span id="current-year"></span> <span class="app-name-dynamic">NFX-Investor</span>. All Rights Reserved.</p>
+            <p></p>
         </div>
     </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
