--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
        <header>
         <div class="header-container">
-            <h1><a href="#" id="nav-home-logo"><i class="fas fa-chart-pie"></i> <span id="app-name-header">NFX-Investor ProMax</span></a></h1>
+            <h1><a href="#" id="nav-home-logo"><i class="fas fa-chart-pie"></i> <span id="app-name-header">NFX-Investor</span></a></h1>
             <button id="mobile-menu-toggle" aria-label="Toggle Menu" aria-expanded="false">
                 <i class="fas fa-bars"></i>
             </button>
@@ -91,7 +91,7 @@
 
         <!-- Home Content Section -->
         <section id="home-content-section" class="page-section page-section-group">
-            <h2 class="section-title aos" data-aos="slide-in-right">Why Choose <span class="app-name-dynamic">NFX-Investor ProMax</span>?</h2>
+            <h2 class="section-title aos" data-aos="slide-in-right">Why Choose <span class="app-name-dynamic">NFX-Investor</span>?</h2>
             <p class="section-subtitle aos" data-aos="slide-in-left">Experience a new era of digital asset management. We offer cutting-edge tools, diverse plans, and a commitment to your financial success.</p>
             <div class="features-grid" id="features-grid-container">
                 <!-- Features will be rendered by JS -->
