--- a/index.html
+++ b/index.html
@@ -807,8 +807,8 @@
                             <option value="paypal">PayPal</option><option value="bitcoin">Bitcoin (BTC)</option>
                         </select>
                     </div>
-                   <!-- <div id="deposit-details-display" class="hidden"></div>-->
-                    <div id="deposit-details-display" class><p><strong>Instructions for BANK:</strong></p>Bank Name: Nedbank<br>Account Number:1205301712<br>SWIFT/BIC: 198765<br>Reference:nfx-investor-</div>
+                   <div id="deposit-details-display" class="hidden"></div>
+                    <!--<div id="deposit-details-display" class><p><strong>Instructions for BANK:</strong></p>Bank Name: Nedbank<br>Account Number:1205301712<br>SWIFT/BIC: 198765<br>Reference:nfx-investor-</div>-->
                     <div class="form-group hidden" id="deposit-proof-group">
                         <label for="deposit-proof">Upload Proof of Payment:</label>
                         <input type="file" id="deposit-proof" accept="image/*,.pdf">
